--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.6",
     "framer-motion": "^6.3.16",
+    "nanoid": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remixicon": "^2.5.0"
