--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nanoid": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "remixicon": "^2.5.0"
+    "remixicon": "^2.5.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
