--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nanoid": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.2.0",
     "remixicon": "^2.5.0",
     "zustand": "^4.0.0-rc.1"
   },
